--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="frameworkName">使用开源库</string>
     <string name="playerName">Vitamio</string>
     <string name="searchResult">搜索结果</string>
+    <string name="fileName">文件名</string>
 </resources>
